--- a/assignment/package.json
+++ b/assignment/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.14.0",
     "firebaseui": "^4.5.0",
+    "mdbreact": "^4.25.6",
     "netlify-cli": "^2.46.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
